--- a/web/themes/s2s/css/style.css
+++ b/web/themes/s2s/css/style.css
@@ -115,6 +115,18 @@ section a:visited, section a:visited:hover {
   background-color: #f1f3f4;
 }
 
+/*----------  Subsection comment block  ----------*/
+.embedded-pdf {
+  width: 100%;
+  height: 600px;
+}
+
+@media (max-width: 767px) {
+  .embedded-pdf {
+    height: 400px;
+  }
+}
+
 /*=====  End of GENERAL TOP LEVEL  ======*/
 /*=============================================
 =            ARTICLES    			          =
