--- a/web/themes/s2s/css/style.css
+++ b/web/themes/s2s/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,500;0,600;1,300;1,500;1,600&display=swap");
 /*=============================================
 =            GENERAL TOP LEVEL                =
 =============================================*/
@@ -115,13 +116,13 @@ section a:visited, section a:visited:hover {
   background-color: #f1f3f4;
 }
 
-/*----------  Subsection comment block  ----------*/
+/*----------  EMBEDDED PDFs  ----------*/
 .embedded-pdf {
   width: 100%;
   height: 600px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 480px) {
   .embedded-pdf {
     height: 400px;
   }
@@ -151,6 +152,10 @@ section a:visited, section a:visited:hover {
   padding: 0 1rem 2rem 1rem;
   max-width: 50rem;
   margin: 0 auto;
+}
+
+section {
+  overflow-x: hidden;
 }
 
 .field--name-body, .field--name-field-treatment-category, .field--name-field-condition-severity, .field--name-field-tags, .field--type-entity-reference, .field--name-field-referral-tool-friendly-des {
@@ -417,12 +422,8 @@ li.node-readmore a:link, li.node-readmore a:visited, .feed-icons a:link, .feed-i
 }
 
 /*----------  NAVBAR BUTTONS  ----------*/
-.btn-white a {
-  color: #262626 !important;
-}
-
-.btn-white a:hover {
-  color: #0370c6;
+a.btn-white {
+  display: none !important;
 }
 
 /*----------  BTN-BLUE  ----------*/
@@ -797,6 +798,8 @@ a.ui-button:active,
   white-space: initial;
   padding: initial;
   font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
   color: inherit;
   display: inline;
 }
@@ -809,7 +812,8 @@ a.ui-button:active,
 =            NAVBAR / HEADER                  =
 =============================================*/
 .logo img {
-  max-height: 72px;
+  max-height: 50px;
+  margin-top: .5rem;
 }
 
 @media (max-width: 767px) {
@@ -1349,6 +1353,20 @@ form#webform-submission-search-for-local-service-add-form {
   .slider-link-2 a:link, .slider-link-2 a:visited {
     padding: 0;
   }
+}
+
+/*----------  /SCREENING-TOOLS  ----------*/
+#block-whichscreentotake ul {
+  -webkit-column-width: 300px;
+  column-width: 300px;
+}
+
+#block-whichscreentotake li {
+  -webkit-column-break-inside: avoid;
+  /* Chrome, Safari, Opera */
+  /* Firefox */
+  break-inside: avoid;
+  /* IE 10+ */
 }
 
 /*----------  DOWNLOAD LINK FOR DIY TOOLS  ----------*/
