--- a/web/modules/custom/crowdsourcing/css/styles.css
+++ b/web/modules/custom/crowdsourcing/css/styles.css
@@ -127,6 +127,8 @@ article.idea .field--type-entity-reference {
 article.idea .field--type-entity-reference > :first-child::before {
   content: "Continue working with this thought:";
   font-weight: 600;
+  float: left;
+  width: 100%;
 }
 
 article.idea .field--type-entity-reference a {
@@ -136,8 +138,9 @@ article.idea .field--type-entity-reference a {
   -moz-border-radius: 10px;
   -webkit-transition: background 100ms linear;
   transition: background 100ms linear;
+  color: black;
   border: 2px solid black;
-  margin: 0.5rem 0;
+  margin: 0.5rem 1rem 0.5rem 0;
   padding: 0.75rem 1rem;
   display: block;
 }
